compiling_error.txt
In file included from c:\mingw\lib\gcc\mingw32\6.3.0\include\c++\mingw32\bits\c++allocator.h:33:0,
                 from c:\mingw\lib\gcc\mingw32\6.3.0\include\c++\bits\allocator.h:46,
                 from c:\mingw\lib\gcc\mingw32\6.3.0\include\c++\string:41,
                 from c:\mingw\lib\gcc\mingw32\6.3.0\include\c++\stdexcept:39,
                 from c:\mingw\lib\gcc\mingw32\6.3.0\include\c++\array:39,
                 from C:\Users\Alright\Desktop\Crypto\NearestNeighbor-GPU\pdf_code.cpp:1:
c:\mingw\lib\gcc\mingw32\6.3.0\include\c++\ext\new_allocator.h: In instantiation of 'void __gnu_cxx::new_allocator<_Tp>::construct(_Up*, _Args&& ...) [with _Up = std::array<unsigned int, 8u>; _Args = {unsigned int&, unsigned int&}; _Tp = std::array<unsigned int, 8u>]':
c:\mingw\lib\gcc\mingw32\6.3.0\include\c++\bits\alloc_traits.h:455:4:   required from 'static void std::allocator_traits<std::allocator<_CharT> >::construct(std::allocator_traits<std::allocator<_CharT> >::allocator_type&, _Up*, _Args&& ...) [with _Up = std::array<unsigned int, 8u>; _Args = {unsigned int&, unsigned int&}; _Tp = std::array<unsigned int, 8u>; std::allocator_traits<std::allocator<_CharT> >::allocator_type = std::allocator<std::array<unsigned int, 8u> >]'
c:\mingw\lib\gcc\mingw32\6.3.0\include\c++\bits\vector.tcc:96:30:   required from 'void std::vector<_Tp, _Alloc>::emplace_back(_Args&& ...) [with _Args = {unsigned int&, unsigned int&}; _Tp = std::array<unsigned int, 8u>; _Alloc = std::allocator<std::array<unsigned int, 8u> >]'
C:\Users\Alright\Desktop\Crypto\NearestNeighbor-GPU\pdf_code.cpp:35:36:   required from here
c:\mingw\lib\gcc\mingw32\6.3.0\include\c++\ext\new_allocator.h:120:4: error: new initializer expression list treated as compound expression [-fpermissive]
  { ::new((void *)__p) _Up(std::forward<_Args>(__args)...); }
    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
c:\mingw\lib\gcc\mingw32\6.3.0\include\c++\ext\new_allocator.h:120:4: error: no matching function for call to 'std::array<unsigned int, 8u>::array(unsigned int&)'
In file included from C:\Users\Alright\Desktop\Crypto\NearestNeighbor-GPU\pdf_code.cpp:1:0:
c:\mingw\lib\gcc\mingw32\6.3.0\include\c++\array:90:12: note: candidate: std::array<unsigned int, 8u>::array()
     struct array
            ^~~~~
c:\mingw\lib\gcc\mingw32\6.3.0\include\c++\array:90:12: note:   candidate expects 0 arguments, 1 provided
c:\mingw\lib\gcc\mingw32\6.3.0\include\c++\array:90:12: note: candidate: constexpr std::array<unsigned int, 8u>::array(const std::array<unsigned int, 8u>&)
c:\mingw\lib\gcc\mingw32\6.3.0\include\c++\array:90:12: note:   no known conversion for argument 1 from 'unsigned int' to 'const std::array<unsigned int, 8u>&'
c:\mingw\lib\gcc\mingw32\6.3.0\include\c++\array:90:12: note: candidate: constexpr std::array<unsigned int, 8u>::array(std::array<unsigned int, 8u>&&)
c:\mingw\lib\gcc\mingw32\6.3.0\include\c++\array:90:12: note:   no known conversion for argument 1 from 'unsigned int' to 'std::array<unsigned int, 8u>&&'
